--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
-PORT=5000
 NODE_ENV=development
-
-DATABASE_URL=
-BCRYPT_SALT_ROUNDS=10
+PORT=5000
+DATABASE_URL=<mongodb_url>
+BCRYPT_SALT_ROUNDS=12
 
 JWT_ACCESS_SECRET=
 JWT_REFRESH_SECRET=
 
-JWT_ACCESS_EXPIRES_IN=300000 # 5m
-JWT_REFRESH_EXPIRES_IN=2592000000 # 30d
-
-
-RESET_PASS_UI_LINK=http://localhost:3000
+JWT_ACCESS_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
+RESET_PASS_UI_LINK=http://localhost:5173
 
 SMTP_AUTH_USER=
 SMTP_AUTH_PASS=
