--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
+    "winston": "^3.17.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
